force-app/main/default/objects/Case_Ext_AP__c.object
<CustomObject>
    <fields>
        <fullName>Calendar__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Case Extensions - AP</relationshipLabel>
        <relationshipName>Case_Extensions_AP</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>This field tracks the number of instances a certain combination of Student ID - Callista External ID - Calendar Code has appeared in a JRG extract.</description>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Attempt__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course Attempt</label>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Case Extensions - AP</relationshipLabel>
        <relationshipName>Case_Extensions_AP</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Contact.Person_ID__c / Course_Attempt__c.Callista_External_Id__c / Calendar__c.Calendar_Code__c</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Response_Date_Time__c</fullName>
        <label>First Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Reminder_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field captures whether a reminder email has been sent for a JRG record.</description>
        <label>Is Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JRG_Risk_Indicators__c</fullName>
        <description>This field will capture the reasons generated as a risk indicator as part of JRG extracts.</description>
        <label>JRG Risk Indicators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consecutive Assessment Fails</fullName>
                </value>
                <value>
                    <fullName>First Assessment Failed</fullName>
                    <isActive>false</isActive>
                    <label>First Assessment Failed</label>
                </value>
                <value>
                    <fullName>Low Moodle Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSON_Payload__c</fullName>
        <label>JSON Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Person ID</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_At__c</fullName>
        <label>Submitted At</label>
        <type>DateTime</type>
    </fields>
    <label>Case Extension - AP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Calendar__c</columns>
        <columns>Count__c</columns>
        <columns>Course_Attempt__c</columns>
        <columns>External_ID__c</columns>
        <columns>Person_ID__c</columns>
        <columns>JRG_Risk_Indicators__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0}</displayFormat>
        <label>AP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Extensions - AP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>